[gd_scene load_steps=8 format=3 uid="uid://dfmhlyleul8db"]

[ext_resource type="Shader" path="res://shaders/scroll-pattern1.gdshader" id="1_7r6xd"]
[ext_resource type="Script" path="res://scenes/ui-scenes/sign-up-screen/Signup.gd" id="1_85ft1"]
[ext_resource type="FontFile" uid="uid://cd8ykjyygruw3" path="res://assets/fonts/Metropolis-Regular.otf" id="2_4r0a3"]
[ext_resource type="Texture2D" uid="uid://cgbl1h00rbxnk" path="res://scenes/ui-scenes/background-pattern/pattern-3.png" id="2_diwh6"]
[ext_resource type="FontFile" uid="uid://csbucy5j8rvls" path="res://assets/fonts/PixelFJVerdana12pt.ttf" id="3_3vrp4"]
[ext_resource type="FontFile" uid="uid://dxfyisbd2ylri" path="res://assets/fonts/joystix monospace.otf" id="3_fo5gn"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_l5r51"]
shader = ExtResource("1_7r6xd")
shader_parameter/scroll_speed = 0.03

[node name="SignUpScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_85ft1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.118581, 0.118581, 0.118581, 1)

[node name="BgPattern" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_l5r51")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_diwh6")

[node name="Filter" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.47451)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="InputFields" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="UsernameInput" type="LineEdit" parent="InputFields"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 712.0
offset_top = 209.0
offset_right = 1560.0
offset_bottom = 276.0
theme_override_fonts/font = ExtResource("2_4r0a3")
theme_override_font_sizes/font_size = 50
placeholder_text = "Username"
clear_button_enabled = true

[node name="EmailInput" type="LineEdit" parent="InputFields"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 712.0
offset_top = 340.0
offset_right = 1560.0
offset_bottom = 407.0
theme_override_fonts/font = ExtResource("2_4r0a3")
theme_override_font_sizes/font_size = 50
placeholder_text = "Email"
clear_button_enabled = true

[node name="PassInput" type="LineEdit" parent="InputFields"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 712.0
offset_top = 468.0
offset_right = 1560.0
offset_bottom = 532.0
theme_override_fonts/font = ExtResource("2_4r0a3")
theme_override_font_sizes/font_size = 50
placeholder_text = "Password..."
clear_button_enabled = true
secret = true

[node name="PassInput2" type="LineEdit" parent="InputFields"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 712.0
offset_top = 596.0
offset_right = 1560.0
offset_bottom = 660.0
theme_override_fonts/font = ExtResource("2_4r0a3")
theme_override_font_sizes/font_size = 50
placeholder_text = "Password..."
clear_button_enabled = true
secret = true

[node name="Buttons" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LoginBtn" type="Button" parent="Buttons"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 803.0
offset_top = 812.0
offset_right = 1045.0
offset_bottom = 888.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_fo5gn")
theme_override_font_sizes/font_size = 56
text = "LOGIN"

[node name="CloseBtn" type="Button" parent="Buttons"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 800.0
offset_top = 927.0
offset_right = 1042.0
offset_bottom = 1003.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_fo5gn")
theme_override_font_sizes/font_size = 56
text = "CLOSE"

[node name="SignupBtn" type="Button" parent="Buttons"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 1295.0
offset_top = 651.0
offset_right = 1537.0
offset_bottom = 716.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_fo5gn")
theme_override_font_sizes/font_size = 56
text = "SIGN UP"

[node name="Labels" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LoginBtnLabel" type="Label" parent="Labels"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 668.0
offset_top = 742.0
offset_right = 1180.0
offset_bottom = 793.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_3vrp4")
theme_override_font_sizes/font_size = 22
text = "Already have an account?"

[node name="Header" type="Label" parent="Labels"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 728.5
offset_top = 34.0
offset_right = 1151.5
offset_bottom = 136.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_fo5gn")
theme_override_font_sizes/font_size = 80
text = "SIGN UP"
horizontal_alignment = 1

[node name="UsernameLabel" type="Label" parent="Labels"]
layout_mode = 0
offset_left = 240.0
offset_top = 217.0
offset_right = 623.0
offset_bottom = 284.0
theme_override_fonts/font = ExtResource("3_fo5gn")
theme_override_font_sizes/font_size = 47
text = "Username"

[node name="UserLabel" type="Label" parent="Labels"]
layout_mode = 0
offset_left = 240.0
offset_top = 340.0
offset_right = 623.0
offset_bottom = 407.0
theme_override_fonts/font = ExtResource("3_fo5gn")
theme_override_font_sizes/font_size = 47
text = "Email"

[node name="PassLabel" type="Label" parent="Labels"]
layout_mode = 0
offset_left = 242.0
offset_top = 452.0
offset_right = 642.0
offset_bottom = 519.0
theme_override_fonts/font = ExtResource("3_fo5gn")
theme_override_font_sizes/font_size = 47
text = "Password"

[node name="PassLabel2" type="Label" parent="Labels"]
layout_mode = 0
offset_left = 240.0
offset_top = 588.0
offset_right = 669.0
offset_bottom = 655.0
theme_override_fonts/font = ExtResource("3_fo5gn")
theme_override_font_sizes/font_size = 47
text = "Confirm Pass"

[connection signal="pressed" from="Buttons/LoginBtn" to="." method="_on_login_btn_pressed"]
[connection signal="pressed" from="Buttons/CloseBtn" to="." method="_on_close_btn_pressed"]
[connection signal="pressed" from="Buttons/SignupBtn" to="." method="_on_signup_btn_pressed"]
